--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Super Mario.sln"
+    "dotnet.defaultSolution": "raimairu-side-scroller.sln"
 }
